# edu_assistant

./: .gitignore  AGENTS.md  LICENSE  README.md  README.pt.md  config.example.json  docker-compose.yml  main.py  requirements.txt
docs/en-GB/: architecture.md  roadmap.md  use-cases.md  vision.md
docs/pt-BR/: arquitetura.md  casos-de-uso.md  roadmap.md  visao.md
modules/: config_loader.py  gpt_client.py  loadKeys.py  voice_input.py  voice_output.py
scripts/: dev_down.sh  dev_up.sh  format.sh  lint.sh  test.sh
services/audit-observability/: Dockerfile  pyproject.toml
services/connectors/connector-docs/: Dockerfile  pyproject.toml
services/connectors/connector-email/: Dockerfile  pyproject.toml
services/connectors/connector-web-search/: Dockerfile  pyproject.toml
services/interface-client/: Dockerfile  pyproject.toml
services/interface-client/src/: __init__.py  app.py
services/memory/: Dockerfile  pyproject.toml
services/orchestrator/: Dockerfile  pyproject.toml
services/orchestrator/src/: app.py
services/policy-permissions/: Dockerfile  pyproject.toml
services/speech/stt/: Dockerfile  pyproject.toml
services/speech/stt/src/: app.py
services/speech/tts/: Dockerfile  pyproject.toml
services/tools/tool-automation/: Dockerfile  pyproject.toml
services/tools/tool-calendar/: Dockerfile  pyproject.toml
services/tools/tool-computation/: Dockerfile  pyproject.toml
services/tools/tool-messaging/: Dockerfile  pyproject.toml
